Fix rendering of text boxes with browse buttons to prevent wrapping
- Refactored support in the FORM_RENDERER
- Date control now used common rendering code
- "search" and "browse" row styles no longer wrap on white-space

--- a/site/resources/styles/core/form-core.less
+++ b/site/resources/styles/core/form-core.less
@@ -217,6 +217,7 @@
 
   .browse
   {
+    white-space: nowrap;
     input
     {
       width: 200px;
@@ -225,6 +226,7 @@
 
   .search
   {
+    white-space: nowrap;
     input
     {
       width: 120px;
